--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-table": "^8.21.3",
-    "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -47,42 +47,43 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.554.0",
-    "next": "^16.0.3",
+    "lucide-react": "^0.561.0",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-day-picker": "^9.11.1",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.1",
-    "react-resizable-panels": "^3.0.6",
+    "react": "^19.2.3",
+    "react-day-picker": "^9.12.0",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.68.0",
+    "react-resizable-panels": "^4.0.7",
     "react-spinners": "^0.17.0",
-    "recharts": "^3.4.1",
+    "recharts": "^3.6.0",
     "rxjs": "^7.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/compat": "^2.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@tauri-apps/cli": "^2.9.4",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.6",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tauri-apps/cli": "^2.9.6",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.47.0",
-    "@typescript-eslint/parser": "^8.47.0",
-    "autoprefixer": "^10.4.22",
-    "eslint": "9.39.1",
-    "eslint-config-next": "16.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
+    "autoprefixer": "^10.4.23",
+    "baseline-browser-mapping": "^2.9.9",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.0.10",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.5.6",
     "prettier-plugin-rust": "^0.1.9",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   }
 }
